--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="home-content">
             <h1>Hi, I'm Arockiya Antony</h1>
             <h3>Frontend Developer</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam modi, nobis iusto error placeat sed corporis nesciunt adipisci dignissimos, ducimus enim, aliquid ex obcaecati a facere aperiam.</p>
+            <p>I'm a fresh graduate who is passionate about technology, loves in developing in designing websites. Programming is something i enjoy doing. I spend my day, thinking , creating content, thinking, cycling thinking. My motivated attitude, hard working nature and creative abilities could be well-utilized for the position.</p>
             <div class="btn-box">
                 <a href="#">Hire Me</a>
                 <a href="#">Let's Talk</a>
